# rust-fortran

./: .gitignore  Cargo.toml  build.rs
lib/: Makefile  sub.f90  test.c
src/: lib.rs
