# cargo

# [[file:~/Workspace/Programming/rust-libs/rust-fortran/rust-fortran.note::*cargo][cargo:1]]
[package]
name = "test-sys"
edition = "2018"
version = "0.0.1"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
quicli = "*"
libc = "*"

[build-dependencies]
cc = "*"
bindgen = "0.42"
# cargo:1 ends here
